# arango-vector-index-tester

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: bench.rs  client.rs  main.rs  setup.rs
