[package]
name = "arango-embedding-dataset"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vrecall"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
hdf5-metno = { version = "0.10", features = ["static", "zlib"] }
indicatif = "0.17"
ndarray = "0.16"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
